# SynthPilot_Tutorial

./: .gitignore  README.md
doc/: 01_project.md  04_sim.md  05_synth.md  05_多时钟域数据采集与串口输出系统.md  05_多时钟域数据采集与串口输出系统_综合分析报告.md  ddr.txt  myZynq_cfg.tcl
doc/05_多时钟域数据采集与串口输出系统/: 02_i2c_design.md  05_多时钟域数据采集与串口输出系统.md  05_多时钟域数据采集与串口输出系统_实现分析报告.md  05_多时钟域数据采集与串口输出系统_设计文档.md
doc/06_xdma_fft_音乐频谱分析仪/: phase1_block_design.md  phase2_fft_ip.md  phase3_magnitude_calc.md  phase4_top_integration.md  phase5_synthesis_implementation.md  phase6_driver_verification.md  phase7_host_application.md  ref_fft_ip_usage.md  主任务书.md
prj/01/prj/demo01/: demo01.xpr
prj/01/rtl/: blink_led.v  key_debounce.v  top.v
prj/01/xdc/: top.xdc
prj/02/prj/demo02/: demo02.xpr
prj/02/rtl/: i2c_master.v  i2c_slave.v
prj/02/sim/: tb_i2c_top.v
prj/03/host/: pyproject.toml  uart_viewer.py
prj/03/prj/demo03/: demo03.xpr
prj/03/prj/demo03/constrs/: board_top.xdc
prj/03/prj/demo03/demo03.srcs/sources_1/ip/async_fifo/: async_fifo.xci
prj/03/prj/demo03/src/: board_top.v
prj/03/rtl/: data_sampler.v  sampler_uart_top.v  uart_tx.v
prj/03/sim/: tb_sampler_uart_top.v
prj/04/host/: fft_spectrum.py  requirements.txt  test_dma.py  test_fft.py
prj/04/host/static/: index.html
prj/04/prj/fft_spectrum/fft_spectrum/: fft_spectrum.xpr
prj/04/prj/fft_spectrum/fft_spectrum/constrs/: top.xdc
prj/04/rtl/: magnitude_calc.v  top.v
prj/04/sim/: tb_datapath.v  tb_fft_ip.sv  tb_fft_ip.v  tb_fft_magnitude.v  tb_magnitude_calc.v
sim/: tb_led.v
src/: buggy_counter.v
(+10 files in other folders)
